--- a/index.css
+++ b/index.css
@@ -66,6 +66,32 @@ header ul li a:hover {
   color: #ff5100;
 }
 
+header .navigationBtn {
+  display: none;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  height: 40px;
+  width: 40px;
+  padding: 10px;
+  background: url(menu.png);
+  background-size: 30px;
+  background-repeat: no-repeat;
+  background-position: center;
+  -webkit-filter: invert(1);
+          filter: invert(1);
+  cursor: pointer;
+}
+
+header .navigationBtn.clicked {
+  background: url(close.png);
+  background-size: 30px;
+  background-repeat: no-repeat;
+  background-position: center;
+  -webkit-filter: invert(0);
+          filter: invert(0);
+}
+
 header.scroll {
   background-color: #fff;
   -webkit-box-shadow: 0 5px 20px rgba(0, 0, 0, 0.3);
@@ -77,6 +103,23 @@ header.scroll a {
 }
 
 header.scroll h2 {
+  color: #111;
+}
+
+header.scroll .navigationBtn {
+  -webkit-filter: invert(0);
+          filter: invert(0);
+}
+
+header.clicked {
+  background-color: #fff;
+}
+
+header.clicked a {
+  color: #111;
+}
+
+header.clicked h2 {
   color: #111;
 }
 
@@ -105,7 +148,7 @@ header.fix {
   height: 100vh;
   width: 100%;
   z-index: 100;
-  padding: 0 30px;
+  padding: 30px;
 }
 
 .home .textBox {
@@ -210,245 +253,6 @@ header.fix {
      object-fit: cover;
 }
 
-.weapon {
-  position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  width: 100%;
-}
-
-.weapon .content {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  padding: 25px;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-.weapon .content .text {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-.weapon .content h2 {
-  color: #111;
-  font-size: 2em;
-}
-
-.weapon .content .collumBox {
-  padding: 25px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-.weapon .content .collumBox .contentBox {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  text-align: left;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  background-color: #eeeded;
-  width: 250px;
-  min-height: 250px;
-  border: solid 15px #eeeded;
-  border-radius: 10px;
-  -webkit-box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.2);
-          box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.2);
-  margin: 20px 30px;
-  z-index: 120;
-  -webkit-transition: 1s;
-  transition: 1s;
-}
-
-.weapon .content .collumBox .contentBox:hover {
-  -webkit-transform: scale(1.1);
-          transform: scale(1.1);
-}
-
-.weapon .content .collumBox .contentBox h2 {
-  font-size: 1.5em;
-}
-
-.weapon .content .collumBox .contentBox h4 {
-  color: #111;
-}
-
-.weapon .content .collumBox .contentBox p {
-  color: #111;
-  padding-top: 10px;
-}
-
-.weapon .content .collumBox .contentBox .imgBox {
-  position: relative;
-  width: 125px;
-  height: 125px;
-  -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
-          box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
-  margin-bottom: 15px;
-  border-radius: 10px;
-}
-
-.weapon .content .collumBox .contentBox .imgBox img {
-  position: relative;
-  border-radius: 10px;
-  width: 100%;
-  height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
-}
-
-.towel {
-  position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  width: 100%;
-}
-
-.towel .text {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  padding-top: 50px;
-}
-
-.towel .container {
-  position: relative;
-  width: 100%;
-  margin: 100px auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  padding: 0 150px;
-}
-
-.towel .container .card {
-  position: relative;
-  width: 300px;
-  height: 400px;
-  background-color: #fff;
-  margin: 25px;
-  -webkit-transform-style: preserve-3d;
-          transform-style: preserve-3d;
-  -webkit-transform: perspective(2000px);
-          transform: perspective(2000px);
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
-  -webkit-box-shadow: inset 300px 0 50px rgba(0, 0, 0, 0.3);
-          box-shadow: inset 300px 0 50px rgba(0, 0, 0, 0.3);
-}
-
-.towel .container .card:hover {
-  z-index: 900;
-  -webkit-transform: perspective(2000px) rotate(-10deg);
-          transform: perspective(2000px) rotate(-10deg);
-  -webkit-box-shadow: inset 20px 0 50px rgba(0, 0, 0, 0.5);
-          box-shadow: inset 20px 0 50px rgba(0, 0, 0, 0.5);
-}
-
-.towel .container .card:hover .imgBox {
-  -webkit-transform: rotateY(-135deg);
-          transform: rotateY(-135deg);
-}
-
-.towel .container .card .imgBox {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  -webkit-transform-origin: left;
-          transform-origin: left;
-  z-index: 1;
-  -webkit-transition: 1s;
-  transition: 1s;
-}
-
-.towel .container .card .imgBox img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-
-.towel .container .card .textBox {
-  position: absolute;
-  top: 0;
-  left: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  padding: 20px;
-}
-
-.towel .container .card .textBox h2 {
-  color: #111;
-}
-
-.towel .container .card .textBox p {
-  color: #111;
-}
-
 .dictionary {
   position: relative;
   display: -webkit-box;
@@ -528,7 +332,7 @@ header.fix {
   text-align: center;
   margin: 20px;
   background-color: #fff;
-  border-radius: 5px;
+  border-radius: 15px;
   -webkit-box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.1);
           box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.1);
   -webkit-transition: 0.5s ease-in-out;
@@ -565,5 +369,91 @@ header.fix {
   transition: 0.5s ease-in-out;
   -ms-flex-negative: 1;
       flex-shrink: 1;
+}
+
+@media (max-width: 991px) {
+  header h2 {
+    padding: 10px 0;
+    font-size: 1em;
+  }
+  header .navigation {
+    display: none;
+  }
+  header .navigation.clicked {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 80px;
+    left: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    background-color: #fff;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  header .navigation.clicked a {
+    font-size: 2em;
+    color: #111;
+  }
+  header .navigation.clicked a:hover {
+    color: #ff5100;
+  }
+  header .navigation.clicked h2 {
+    color: #111;
+  }
+  header .navigation.clicked .navigationBtn {
+    -webkit-filter: invert(0);
+            filter: invert(0);
+  }
+  header .navigationBtn {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .home .textBox h3 {
+    font-size: 2.5em;
+  }
+  .home .textBox p {
+    font-size: 1.5em;
+  }
+  .home .btn {
+    font-size: 1.3em;
+    padding: 15px 20px;
+    margin-top: 30px;
+  }
+  .about {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .about .contentBox {
+    width: 100%;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .about .contentBox h2 {
+    padding-bottom: 20px;
+    color: #fff;
+  }
+  .about .contentBox p {
+    letter-spacing: 0.1em;
+    font-size: 1em;
+    color: #fff;
+    padding-top: 5px;
+  }
+  .about .imgBox {
+    width: 100%;
+  }
 }
 /*# sourceMappingURL=index.css.map */
