--- a/index.scss
+++ b/index.scss
@@ -46,9 +46,41 @@ header {
             }
         }
     }
+    .navigationBtn {
+        display: none;
+        justify-content: center;
+        height: 40px;
+        width: 40px;
+        padding: 10px;
+        background: url(menu.png);
+        background-size: 30px;
+        background-repeat: no-repeat;
+        background-position: center;
+        filter: invert(1);
+        cursor: pointer;
+        &.clicked {
+            background: url(close.png);
+            background-size: 30px;
+            background-repeat: no-repeat;
+            background-position: center;
+            filter: invert(0);
+        }
+    }
     &.scroll {
         background-color: #fff;
         box-shadow: 0 5px 20px rgba(0,0,0,0.3);
+        a {
+            color: #111;
+        }
+        h2 {
+            color: #111;
+        }
+        .navigationBtn {
+            filter: invert(0);
+        }
+    }
+    &.clicked {
+        background-color: #fff;
         a {
             color: #111;
         }
@@ -72,7 +104,7 @@ header {
     height: 100vh;
     width: 100%;
     z-index: 100;
-    padding: 0 30px;
+    padding: 30px;
     .textBox {
         z-index: 100;
         h3 {
@@ -122,6 +154,7 @@ header {
     display: flex;
     width: 100%;
     .contentBox {
+        // TODO
         position: relative;
         display: flex;
         flex-direction: column;
@@ -152,159 +185,9 @@ header {
     }
 }
 
-.weapon {
-    position: relative;
-    display: flex;
-    width: 100%;
-    .content {
-        position: relative;
-        width: 100%;
-        height: 100%;
-        display: flex;
-        padding: 25px;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        .text {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-        }
-        h2 {
-            color: #111;
-            font-size: 2em;
-        }
-        .collumBox {
-            padding: 25px;
-            display: flex;
-            flex-direction: row;
-            flex-wrap: wrap;
-            justify-content: center;
-            .contentBox {
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                text-align: left;
-                justify-content: center;
-                background-color: rgb(238, 237, 237);
-                width: 250px;
-                min-height: 250px;
-                border: solid 15px rgb(238, 237, 237);
-                border-radius: 10px;
-                box-shadow: 0px 0px 10px 3px rgba(0,0,0,0.2);
-                margin: 20px 30px;
-                z-index: 120;
-                transition: 1s;
-                &:hover {
-                    transform: scale(1.1);
-                }
-                h2 {
-                    font-size: 1.5em;
-                }
-                h4 {
-                    color: #111;
-                }
-                p {
-                    color: #111;
-                    padding-top: 10px;
-                }
-                .imgBox {
-                    position: relative;
-                    
-                    width: 125px;
-                    height: 125px;
-                    box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
-                    margin-bottom: 15px;
-                    border-radius: 10px;
-                    img {
-                        position: relative;
-                        border-radius: 10px;
-                        
-                        width: 100%;
-                        height: 100%;
-                        object-fit: cover;
-                        transition: 0.5s;
-                        
-                    }
-                }
-            }
-        }
-    }
-}
 
-.towel {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-    
-    .text {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        padding-top: 50px;
-    }
-    .container {
-        position: relative;
-        width: 100%;
-        margin: 100px auto;
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-around;
-        padding: 0 150px;
-        .card {
-            position: relative;
-            width: 300px;
-            height: 400px;
-            background-color: #fff;
-            margin: 25px;
-            transform-style: preserve-3d;
-            transform: perspective(2000px);
-            transition: 0.5s;
-            box-shadow: inset 300px 0 50px rgba(0,0,0,0.3);
-            &:hover {
-                z-index: 900;
-                transform: perspective(2000px) rotate(-10deg);
-                box-shadow: inset 20px 0 50px rgba(0,0,0,0.5);
-                .imgBox {
-                    transform: rotateY(-135deg);
-                }
-            }
-            .imgBox {
-                position: relative;
-                width: 100%;
-                height: 100%;
-                
-                transform-origin: left;
-                z-index: 1;
-                transition: 1s;
-                img {
-                    position: absolute;
-                    top: 0;
-                    left: 0;
-                    width: 100%;
-                    height: 100%;
-                    object-fit: cover;
-                }
-            }
-            .textBox {
-                position: absolute;
-                top: 0;
-                left: 0;
-                box-sizing: border-box;
-                padding: 20px;
-                h2 {
-                    color: #111;
-                }
-                p {
-                    color: #111;
-                }
-            }
-        }
-    }
-    
-}
+
+
 
 .dictionary {
     position: relative;
@@ -345,7 +228,7 @@ header {
                     text-align: center;
                     margin: 20px;
                     background-color: #fff;
-                    border-radius: 5px;
+                    border-radius: 15px;
                     box-shadow: 0px 0px 10px 3px rgba(0,0,0,0.1);
                     transition: 0.5s ease-in-out;
                     transition-delay: 0.5s;
@@ -382,5 +265,87 @@ header {
 }
 
 @media (max-width:991px) {
-    
+    header {
+        
+        h2 {
+            padding: 10px 0;
+            font-size: 1em;
+        }
+        .navigation {
+            display: none;
+            &.clicked {
+                width: 100%;
+                height: 100%;
+                position: fixed;
+                top: 80px;
+                left: 0;
+                display: flex;
+                background-color: #fff;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                a {
+                    font-size: 2em;
+                    color: #111;
+                    &:hover {
+                        color: rgb(255, 81, 0);
+                    }
+                }
+                h2 {
+                    color: #111;
+                }
+                .navigationBtn {
+                    filter: invert(0);
+                    
+                }
+            }
+        }
+        .navigationBtn {
+            display: flex;
+            
+        }
+
+    }
+
+
+
+    .home {
+        .textBox {
+            h3 {
+                font-size: 2.5em;
+            }
+            p {
+                font-size: 1.5em;
+            }
+        }
+        .btn {
+            font-size: 1.3em;
+            padding: 15px 20px;
+            margin-top: 30px;
+        }
+        
+    }
+
+    .about {
+        flex-direction: column;
+        .contentBox {
+            // TODO
+            width: 100%;
+            align-items: center;
+            h2 {
+                padding-bottom: 20px;
+                color: #fff
+            }
+            p {
+                letter-spacing: 0.1em;
+                font-size: 1em;
+                color: #fff;
+                padding-top: 5px;
+            }
+            
+        }
+        .imgBox {
+            width: 100%;
+        }
+    }
 }
