--- a/towel.css
+++ b/towel.css
@@ -126,134 +126,115 @@ header.clicked h2 {
   color: #111;
 }
 
-.weapon {
+.towel {
   position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  padding-top: 60px;
+  padding: 80px 20px 0 20px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   width: 100%;
 }
 
-.weapon .content {
+.towel .text {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-top: 50px;
+}
+
+.towel .container {
+  position: relative;
+  width: 100%;
+  margin: 100px auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  padding: 0 150px;
+}
+
+.towel .container .card {
+  position: relative;
+  width: 300px;
+  height: 400px;
+  background-color: #fff;
+  margin: 25px;
+  -webkit-transform-style: preserve-3d;
+          transform-style: preserve-3d;
+  -webkit-transform: perspective(2000px);
+          transform: perspective(2000px);
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  -webkit-box-shadow: inset 300px 0 50px rgba(0, 0, 0, 0.3);
+          box-shadow: inset 300px 0 50px rgba(0, 0, 0, 0.3);
+}
+
+.towel .container .card:hover {
+  z-index: 900;
+  -webkit-transform: perspective(2000px) rotate(-10deg);
+          transform: perspective(2000px) rotate(-10deg);
+  -webkit-box-shadow: inset 20px 0 50px rgba(0, 0, 0, 0.5);
+          box-shadow: inset 20px 0 50px rgba(0, 0, 0, 0.5);
+}
+
+.towel .container .card:hover .imgBox {
+  -webkit-transform: rotateY(-135deg);
+          transform: rotateY(-135deg);
+}
+
+.towel .container .card .imgBox {
   position: relative;
   width: 100%;
   height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  padding: 25px;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-.weapon .content .text {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-.weapon .content h2 {
-  color: #111;
-  font-size: 2em;
-}
-
-.weapon .content .collumBox {
-  padding: 25px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-.weapon .content .collumBox .contentBox {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  text-align: left;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  background-color: #eeeded;
-  width: 250px;
-  min-height: 250px;
-  border: solid 15px #eeeded;
-  border-radius: 10px;
-  -webkit-box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.2);
-          box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.2);
-  margin: 20px 30px;
-  z-index: 120;
+  -webkit-transform-origin: left;
+          transform-origin: left;
+  z-index: 1;
   -webkit-transition: 1s;
   transition: 1s;
 }
 
-.weapon .content .collumBox .contentBox:hover {
-  -webkit-transform: scale(1.1);
-          transform: scale(1.1);
-}
-
-.weapon .content .collumBox .contentBox h2 {
-  font-size: 1.5em;
-}
-
-.weapon .content .collumBox .contentBox h4 {
-  color: #111;
-}
-
-.weapon .content .collumBox .contentBox p {
-  color: #111;
-  padding-top: 10px;
-}
-
-.weapon .content .collumBox .contentBox .imgBox {
-  position: relative;
-  width: 125px;
-  height: 125px;
-  -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
-          box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
-  margin-bottom: 15px;
-  border-radius: 10px;
-}
-
-.weapon .content .collumBox .contentBox .imgBox img {
-  position: relative;
-  border-radius: 10px;
+.towel .container .card .imgBox img {
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
+}
+
+.towel .container .card .textBox {
+  position: absolute;
+  top: 0;
+  left: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 20px;
+}
+
+.towel .container .card .textBox h2 {
+  color: #111;
+}
+
+.towel .container .card .textBox p {
+  color: #111;
 }
 
 @media (max-width: 991px) {
@@ -304,8 +285,8 @@ header.clicked h2 {
     display: -ms-flexbox;
     display: flex;
   }
-  .weapon {
-    padding-top: 80px;
+  .towel .container {
+    padding: 20px;
   }
 }
-/*# sourceMappingURL=weapon.css.map */
+/*# sourceMappingURL=towel.css.map */
